[package]
name = "fcp"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
clap = { version = "3.0.14", features = ["derive"] }
indicatif = "0.16.2"
windows-sys = {version ="0.33.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_WindowsProgramming"]}
substring = "1.4.5"
