[package]
name = "fcp"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
clap = { version = "3.0.14", features = ["derive"] }
indicatif = {git = "https://github.com/console-rs/indicatif", branch = "align-truncate"}
windows-sys = {version ="0.33.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_WindowsProgramming"]}
glob = "0.3.0"
shellexpand = "2.1.0"
directories = "4.0.1"
lazy_static = "1.4.0"
anyhow = "1.0.56"
dunce = "1.0.2"
